[package]
name = "hwlender"
version = "0.1.0"
authors = ["Alex Hunt <alex.s.hunt7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
futures-util = "0.3"
hyper = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tokio = { version = "0.2", features = ["full"] }
