[package]
name = "hwlender"
version = "0.1.0"
authors = ["Alex Hunt <alex.s.hunt7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
askama = "0.9"
clap = { version = "2.33" }
pretty_env_logger = { version = "0.4" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = "0.8"
tokio = { version = "0.2", features = ["full"] }
warp = { version = "0.2", features = ["tls"] }
